--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_audience_statistics.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_audience_statistics.default.yml
@@ -11,8 +11,35 @@ dependencies:
     - field.field.paragraph.block_audience_statistics.field_styles
     - paragraphs.paragraphs_type.block_audience_statistics
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 3
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
 id: paragraph.block_audience_statistics.default
 targetEntityType: paragraph
 bundle: block_audience_statistics
@@ -20,7 +47,7 @@ mode: default
 content:
   field_audience_statistics_items:
     type: entity_reference_paragraphs
-    weight: 5
+    weight: 6
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -43,7 +70,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_new_heading:
-    weight: 3
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -55,7 +82,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_paragraph:
-    weight: 4
+    weight: 5
     settings:
       rows: 5
       placeholder: ''
@@ -71,7 +98,7 @@ content:
     type: string_textfield
     region: content
   field_styles:
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
