--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_core_product_message.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_core_product_message.default.yml
@@ -9,7 +9,34 @@ dependencies:
     - field.field.paragraph.block_core_product_message.field_styles
     - paragraphs.paragraphs_type.block_core_product_message
   module:
+    - field_group
     - paragraphs
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
 id: paragraph.block_core_product_message.default
 targetEntityType: paragraph
 bundle: block_core_product_message
@@ -17,7 +44,7 @@ mode: default
 content:
   field_cpm_items:
     type: entity_reference_paragraphs
-    weight: 3
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -28,7 +55,7 @@ content:
     third_party_settings: {  }
     region: content
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -48,7 +75,7 @@ content:
     type: string_textfield
     region: content
   field_styles:
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
