--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_download_file_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_download_file_b.default.yml
@@ -11,14 +11,41 @@ dependencies:
     - field.field.paragraph.block_download_file_b.field_styles
     - paragraphs.paragraphs_type.block_download_file_b
   module:
+    - field_group
     - paragraphs
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
 id: paragraph.block_download_file_b.default
 targetEntityType: paragraph
 bundle: block_download_file_b
 mode: default
 content:
   field_file_description:
-    weight: 3
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -26,7 +53,7 @@ content:
     type: string_textfield
     region: content
   field_link:
-    weight: 4
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -38,7 +65,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -50,7 +77,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_paragraph_image:
-    weight: 5
+    weight: 6
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -70,7 +97,7 @@ content:
     type: string_textfield
     region: content
   field_styles:
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
