--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_audience_product_top.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_audience_product_top.default.yml
@@ -11,15 +11,42 @@ dependencies:
     - field.field.paragraph.block_audience_product_top.field_styles
     - paragraphs.paragraphs_type.block_audience_product_top
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 3
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
 id: paragraph.block_audience_product_top.default
 targetEntityType: paragraph
 bundle: block_audience_product_top
 mode: default
 content:
   field_article:
-    weight: 5
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
@@ -28,7 +55,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -40,7 +67,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_paragraph:
-    weight: 3
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
@@ -48,7 +75,7 @@ content:
     type: text_textarea
     region: content
   field_paragraph_image:
-    weight: 4
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -61,7 +88,7 @@ content:
     region: content
   field_scroll_id:
     type: string_textfield
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -69,7 +96,7 @@ content:
     region: content
   field_styles:
     type: entity_reference_paragraphs
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
