--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_audience_statistics_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_audience_statistics_b.default.yml
@@ -12,8 +12,35 @@ dependencies:
     - field.field.paragraph.block_audience_statistics_b.field_styles
     - paragraphs.paragraphs_type.block_audience_statistics_b
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
 id: paragraph.block_audience_statistics_b.default
 targetEntityType: paragraph
 bundle: block_audience_statistics_b
@@ -21,7 +48,7 @@ mode: default
 content:
   field_audience_statistics:
     type: entity_reference_paragraphs
-    weight: 5
+    weight: 6
     settings:
       title: Statistic
       title_plural: Statistics
@@ -32,7 +59,7 @@ content:
     third_party_settings: {  }
     region: content
   field_background_image:
-    weight: 3
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -44,7 +71,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_cta:
-    weight: 6
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -52,7 +79,7 @@ content:
     type: string_textfield
     region: content
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -64,7 +91,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_paragraph:
-    weight: 4
+    weight: 5
     settings:
       rows: 5
       placeholder: ''
@@ -81,7 +108,7 @@ content:
     region: content
   field_styles:
     type: entity_reference_paragraphs
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
