--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_audience_top_programming.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_audience_top_programming.default.yml
@@ -10,15 +10,42 @@ dependencies:
     - field.field.paragraph.block_audience_top_programming.field_styles
     - paragraphs.paragraphs_type.block_audience_top_programming
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
 id: paragraph.block_audience_top_programming.default
 targetEntityType: paragraph
 bundle: block_audience_top_programming
 mode: default
 content:
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -30,7 +57,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_paragraph:
-    weight: 3
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
@@ -46,7 +73,7 @@ content:
     third_party_settings: {  }
     region: content
   field_shows:
-    weight: 4
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
@@ -56,7 +83,7 @@ content:
     region: content
   field_styles:
     type: entity_reference_paragraphs
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
