--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_blog_post_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_blog_post_b.default.yml
@@ -9,7 +9,34 @@ dependencies:
     - field.field.paragraph.block_blog_post_b.field_styles
     - paragraphs.paragraphs_type.block_blog_post_b
   module:
+    - field_group
     - paragraphs
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
 id: paragraph.block_blog_post_b.default
 targetEntityType: paragraph
 bundle: block_blog_post_b
@@ -17,7 +44,7 @@ mode: default
 content:
   field_blog_post_items:
     type: entity_reference_paragraphs
-    weight: 3
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -28,7 +55,7 @@ content:
     third_party_settings: {  }
     region: content
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -49,7 +76,7 @@ content:
     region: content
   field_styles:
     type: entity_reference_paragraphs
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
