--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_double_image.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_double_image.default.yml
@@ -8,7 +8,22 @@ dependencies:
     - field.field.paragraph.block_double_image.field_two_images
     - paragraphs.paragraphs_type.block_double_image
   module:
+    - field_group
     - paragraphs
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
 id: paragraph.block_double_image.default
 targetEntityType: paragraph
 bundle: block_double_image
@@ -16,7 +31,7 @@ mode: default
 content:
   field_scroll_id:
     type: string_textfield
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -24,7 +39,7 @@ content:
     region: content
   field_styles:
     type: entity_reference_paragraphs
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -36,7 +51,7 @@ content:
     region: content
   field_two_images:
     type: entity_reference_paragraphs
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
