--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_download_file_a.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_download_file_a.default.yml
@@ -11,15 +11,42 @@ dependencies:
     - field.field.paragraph.block_download_file_a.field_styles
     - paragraphs.paragraphs_type.block_download_file_a
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
 id: paragraph.block_download_file_a.default
 targetEntityType: paragraph
 bundle: block_download_file_a
 mode: default
 content:
   field_file_description:
-    weight: 4
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -27,7 +54,7 @@ content:
     type: string_textfield
     region: content
   field_link:
-    weight: 5
+    weight: 6
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -39,7 +66,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -51,7 +78,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_paragraph:
-    weight: 3
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
@@ -67,7 +94,7 @@ content:
     type: string_textfield
     region: content
   field_styles:
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
