--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_glossary_a.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_glossary_a.default.yml
@@ -11,8 +11,59 @@ dependencies:
     - field.field.paragraph.block_glossary_a.field_styles
     - paragraphs.paragraphs_type.block_glossary_a
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
+    group_links:
+      children:
+        - field_link
+      parent_name: ''
+      weight: 4
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Links
+    group_items:
+      children:
+        - field_glossary_a_items
+      parent_name: ''
+      weight: 5
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Items
 id: paragraph.block_glossary_a.default
 targetEntityType: paragraph
 bundle: block_glossary_a
@@ -20,7 +71,7 @@ mode: default
 content:
   field_glossary_a_items:
     type: entity_reference_paragraphs
-    weight: 5
+    weight: 6
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -31,7 +82,7 @@ content:
     third_party_settings: {  }
     region: content
   field_link:
-    weight: 4
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -43,7 +94,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -71,7 +122,7 @@ content:
     type: string_textfield
     region: content
   field_styles:
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
