--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_glossary_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_glossary_b.default.yml
@@ -12,21 +12,36 @@ dependencies:
     - field.field.paragraph.block_glossary_b.field_styles
     - paragraphs.paragraphs_type.block_glossary_b
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
 id: paragraph.block_glossary_b.default
 targetEntityType: paragraph
 bundle: block_glossary_b
 mode: default
 content:
   field_landing_category:
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_main_heading:
-    weight: 5
+    weight: 6
     settings:
       size: 60
       placeholder: ''
@@ -34,7 +49,7 @@ content:
     type: string_textfield
     region: content
   field_paragraph:
-    weight: 6
+    weight: 7
     settings:
       rows: 5
       placeholder: ''
@@ -43,14 +58,14 @@ content:
     region: content
   field_scroll_id:
     type: string_textfield
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     region: content
   field_search_placeholder:
-    weight: 4
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -58,7 +73,7 @@ content:
     type: string_textfield
     region: content
   field_show_more_label:
-    weight: 3
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -67,7 +82,7 @@ content:
     region: content
   field_styles:
     type: entity_reference_paragraphs
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
