--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_hero_quaternary.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_hero_quaternary.default.yml
@@ -16,8 +16,47 @@ dependencies:
     - paragraphs.paragraphs_type.block_hero_quaternary
   module:
     - entity_browser
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
+    group_link:
+      children:
+        - field_link
+      parent_name: ''
+      weight: 8
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Link
 id: paragraph.block_hero_quaternary.default
 targetEntityType: paragraph
 bundle: block_hero_quaternary
@@ -36,7 +75,7 @@ content:
     third_party_settings: {  }
     region: content
   field_link:
-    weight: 8
+    weight: 9
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -49,7 +88,7 @@ content:
     region: content
   field_new_heading:
     type: entity_reference_paragraphs
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -88,7 +127,7 @@ content:
     type: string_textfield
     region: content
   field_styles:
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
