--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_image_with_content_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_image_with_content_b.default.yml
@@ -12,32 +12,71 @@ dependencies:
     - field.field.paragraph.block_image_with_content_b.field_styles
     - paragraphs.paragraphs_type.block_image_with_content_b
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 3
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
+    group_background_image:
+      children:
+        - field_background_image
+      parent_name: ''
+      weight: 5
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Background image'
+    group_link:
+      children:
+        - field_link
+      parent_name: ''
+      weight: 20
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Link
 id: paragraph.block_image_with_content_b.default
 targetEntityType: paragraph
 bundle: block_image_with_content_b
 mode: default
 content:
   field_alignment:
-    weight: 2
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_background_image:
-    weight: 5
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
-    third_party_settings: {  }
-    type: entity_reference_paragraphs
-    region: content
-  field_link:
     weight: 6
     settings:
       title: Paragraph
@@ -49,8 +88,20 @@ content:
     third_party_settings: {  }
     type: entity_reference_paragraphs
     region: content
+  field_link:
+    weight: 7
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    type: entity_reference_paragraphs
+    region: content
   field_new_heading:
-    weight: 3
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -70,7 +121,7 @@ content:
     type: text_textarea
     region: content
   field_scroll_id:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -78,7 +129,7 @@ content:
     type: string_textfield
     region: content
   field_styles:
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
