--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_infographic.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_infographic.default.yml
@@ -14,8 +14,60 @@ dependencies:
     - field.field.paragraph.block_infographic.field_styles
     - paragraphs.paragraphs_type.block_infographic
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 3
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
+    group_background_image:
+      children:
+        - field_background_image
+      parent_name: ''
+      weight: 5
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Background image'
+    group_links:
+      children:
+        - field_primary_link
+        - field_secondary_link
+      parent_name: ''
+      weight: 7
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Links
 id: paragraph.block_infographic.default
 targetEntityType: paragraph
 bundle: block_infographic
@@ -28,7 +80,7 @@ content:
     type: options_select
     region: content
   field_background_image:
-    weight: 5
+    weight: 6
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -40,7 +92,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_new_heading:
-    weight: 3
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -73,7 +125,7 @@ content:
     region: content
   field_primary_link:
     type: entity_reference_paragraphs
-    weight: 7
+    weight: 8
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -93,7 +145,7 @@ content:
     region: content
   field_secondary_link:
     type: entity_reference_paragraphs
-    weight: 8
+    weight: 9
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -104,7 +156,7 @@ content:
     third_party_settings: {  }
     region: content
   field_styles:
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
