--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_large_video.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_large_video.default.yml
@@ -11,14 +11,29 @@ dependencies:
     - paragraphs.paragraphs_type.block_large_video
   module:
     - entity_browser
+    - field_group
     - paragraphs
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
 id: paragraph.block_large_video.default
 targetEntityType: paragraph
 bundle: block_large_video
 mode: default
 content:
   field_poster:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -31,7 +46,7 @@ content:
     region: content
   field_scroll_id:
     type: string_textfield
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -39,7 +54,7 @@ content:
     region: content
   field_styles:
     type: entity_reference_paragraphs
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -50,7 +65,7 @@ content:
     third_party_settings: {  }
     region: content
   field_video:
-    weight: 3
+    weight: 4
     settings:
       entity_browser: video
       field_widget_display: label
