--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_main_product_nav.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_main_product_nav.default.yml
@@ -10,15 +10,54 @@ dependencies:
     - field.field.paragraph.block_main_product_nav.field_styles
     - paragraphs.paragraphs_type.block_main_product_nav
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
+    group_items:
+      children:
+        - field_product_items
+      parent_name: ''
+      weight: 6
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Items
 id: paragraph.block_main_product_nav.default
 targetEntityType: paragraph
 bundle: block_main_product_nav
 mode: default
 content:
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -30,7 +69,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_paragraph:
-    weight: 3
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
@@ -39,7 +78,7 @@ content:
     region: content
   field_product_items:
     type: entity_reference_paragraphs
-    weight: 4
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -59,7 +98,7 @@ content:
     region: content
   field_styles:
     type: entity_reference_paragraphs
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
