--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_product_list.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_product_list.default.yml
@@ -10,15 +10,54 @@ dependencies:
     - field.field.paragraph.block_product_list.field_styles
     - paragraphs.paragraphs_type.block_product_list
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
+    group_products:
+      children:
+        - field_articles
+      parent_name: ''
+      weight: 4
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Products
 id: paragraph.block_product_list.default
 targetEntityType: paragraph
 bundle: block_product_list
 mode: default
 content:
   field_articles:
-    weight: 4
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
@@ -27,7 +66,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -56,7 +95,7 @@ content:
     region: content
   field_styles:
     type: entity_reference_paragraphs
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
