--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_success_stories_a.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_success_stories_a.default.yml
@@ -8,7 +8,34 @@ dependencies:
     - field.field.paragraph.block_success_stories_a.field_styles
     - paragraphs.paragraphs_type.block_success_stories_a
   module:
+    - field_group
     - paragraphs
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_story:
+      children:
+        - field_article
+      parent_name: ''
+      weight: 3
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Story
 id: paragraph.block_success_stories_a.default
 targetEntityType: paragraph
 bundle: block_success_stories_a
@@ -25,7 +52,7 @@ content:
     region: content
   field_scroll_id:
     type: string_textfield
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -33,7 +60,7 @@ content:
     region: content
   field_styles:
     type: entity_reference_paragraphs
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
