--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_success_stories_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_success_stories_b.default.yml
@@ -11,8 +11,47 @@ dependencies:
     - field.field.paragraph.block_success_stories_b.field_styles
     - paragraphs.paragraphs_type.block_success_stories_b
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 3
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
+    group_stories:
+      children:
+        - field_articles
+      parent_name: ''
+      weight: 7
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Stories
 id: paragraph.block_success_stories_b.default
 targetEntityType: paragraph
 bundle: block_success_stories_b
@@ -25,7 +64,7 @@ content:
     type: options_select
     region: content
   field_articles:
-    weight: 5
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
@@ -34,7 +73,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_new_heading:
-    weight: 3
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -46,7 +85,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_paragraph:
-    weight: 4
+    weight: 5
     settings:
       rows: 5
       placeholder: ''
@@ -63,7 +102,7 @@ content:
     region: content
   field_styles:
     type: entity_reference_paragraphs
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
