--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_target_audience.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_target_audience.default.yml
@@ -10,14 +10,65 @@ dependencies:
     - field.field.paragraph.block_target_audience.field_styles
     - paragraphs.paragraphs_type.block_target_audience
   module:
+    - field_group
     - paragraphs
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
+    group_background_image:
+      children:
+        - field_background_image
+      parent_name: ''
+      weight: 3
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Background image'
+    group_devices:
+      children:
+        - field_devices
+      parent_name: ''
+      weight: 6
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Devices
 id: paragraph.block_target_audience.default
 targetEntityType: paragraph
 bundle: block_target_audience
 mode: default
 content:
   field_background_image:
-    weight: 3
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -30,7 +81,7 @@ content:
     region: content
   field_devices:
     type: entity_reference_paragraphs
-    weight: 4
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -41,7 +92,7 @@ content:
     third_party_settings: {  }
     region: content
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -61,7 +112,7 @@ content:
     type: string_textfield
     region: content
   field_styles:
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
