--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_twitter_feed.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_twitter_feed.default.yml
@@ -7,7 +7,22 @@ dependencies:
     - field.field.paragraph.block_twitter_feed.field_styles
     - paragraphs.paragraphs_type.block_twitter_feed
   module:
+    - field_group
     - paragraphs
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
 id: paragraph.block_twitter_feed.default
 targetEntityType: paragraph
 bundle: block_twitter_feed
@@ -15,7 +30,7 @@ mode: default
 content:
   field_scroll_id:
     type: string_textfield
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -23,7 +38,7 @@ content:
     region: content
   field_styles:
     type: entity_reference_paragraphs
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
