--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_video_with_content_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_video_with_content_b.default.yml
@@ -15,8 +15,60 @@ dependencies:
     - paragraphs.paragraphs_type.block_video_with_content_b
   module:
     - entity_browser
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 3
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
+    group_link:
+      children:
+        - field_link
+      parent_name: ''
+      weight: 7
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Link
+    group_poster_and_video:
+      children:
+        - field_poster
+        - field_video
+      parent_name: ''
+      weight: 5
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Poster and Video'
 id: paragraph.block_video_with_content_b.default
 targetEntityType: paragraph
 bundle: block_video_with_content_b
@@ -41,7 +93,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -53,7 +105,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_paragraph:
-    weight: 3
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
@@ -62,7 +114,7 @@ content:
     region: content
   field_poster:
     type: entity_reference_paragraphs
-    weight: 4
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -73,7 +125,7 @@ content:
     third_party_settings: {  }
     region: content
   field_scroll_id:
-    weight: 7
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -81,7 +133,7 @@ content:
     type: string_textfield
     region: content
   field_styles:
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -93,7 +145,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_video:
-    weight: 5
+    weight: 6
     settings:
       entity_browser: video_internal
       field_widget_display: label
