--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.slide_item.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.slide_item.default.yml
@@ -9,15 +9,42 @@ dependencies:
     - field.field.paragraph.slide_item.field_paragraph_image
     - paragraphs.paragraphs_type.slide_item
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_image:
+      children:
+        - field_paragraph_image
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Image
+    group_link:
+      children:
+        - field_link
+      parent_name: ''
+      weight: 5
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Link
 id: paragraph.slide_item.default
 targetEntityType: paragraph
 bundle: slide_item
 mode: default
 content:
   field_link:
-    weight: 3
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -45,7 +72,7 @@ content:
     type: text_textarea
     region: content
   field_paragraph_image:
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
