--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.text_and_link.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.text_and_link.default.yml
@@ -8,8 +8,23 @@ dependencies:
     - field.field.paragraph.text_and_link.field_paragraph
     - paragraphs.paragraphs_type.text_and_link
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_link:
+      children:
+        - field_link
+      parent_name: ''
+      weight: 20
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Link
 id: paragraph.text_and_link.default
 targetEntityType: paragraph
 bundle: text_and_link
