--- a/source/drupal/var/drupal-config/sync/field.field.paragraph.image.field_normal.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.paragraph.image.field_normal.yml
@@ -11,8 +11,8 @@ id: paragraph.image.field_normal
 field_name: field_normal
 entity_type: paragraph
 bundle: image
-label: Normal
-description: ''
+label: Desktop
+description: 'This image will be display on desktop/big screens.'
 required: true
 translatable: true
 default_value: {  }
