--- a/source/drupal/var/drupal-config/sync/metatag.metatag_defaults.global.yml
+++ b/source/drupal/var/drupal-config/sync/metatag.metatag_defaults.global.yml
@@ -8,3 +8,6 @@ id: global
 label: Global
 tags:
   title: '[current-page:title] | [site:name]'
+  keywords: 'tv advertising, local advertising, marketing platform, charter media, building brand awareness, cost of tv advertising, automotive, local advertising rates, small business, audience intelligence'
+  description: 'Spectrum Reach, the advertising sales division of Spectrum, offers TV and digital advertising solutions that are accessible, affordable, and effective for local, regional and national businesses.'
+  canonical_url: '[site:url]'
