--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.node.show.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.node.show.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.node.show.field_show_recommend
     - field.field.node.show.field_show_schedules
     - field.field.node.show.field_show_videos
+    - field.field.node.show.field_similar_networks
     - field.field.node.show.field_success_stories_a
     - node.type.show
   module:
@@ -133,6 +134,14 @@ content:
     region: content
   field_show_videos:
     weight: 109
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_similar_networks:
+    weight: 119
     label: above
     settings:
       link: true
