--- a/source/drupal/var/drupal-config/sync/system.site.yml
+++ b/source/drupal/var/drupal-config/sync/system.site.yml
@@ -4,8 +4,8 @@ mail: admin@example.com
 slogan: ''
 page:
   403: ''
-  404: /node/16
-  front: /node
+  404: ''
+  front: /node/8
 admin_compact_mode: false
 weight_select_max: 100
 langcode: en
