--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.block_product_list.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.block_product_list.default.yml
@@ -3,9 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.block_product_list.field_articles
     - field.field.paragraph.block_product_list.field_new_heading
     - field.field.paragraph.block_product_list.field_paragraph
+    - field.field.paragraph.block_product_list.field_products
     - field.field.paragraph.block_product_list.field_scroll_id
     - field.field.paragraph.block_product_list.field_styles
     - paragraphs.paragraphs_type.block_product_list
@@ -17,14 +17,6 @@ targetEntityType: paragraph
 bundle: block_product_list
 mode: default
 content:
-  field_articles:
-    weight: 0
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_new_heading:
     weight: 1
     label: above
@@ -40,6 +32,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
+  field_products:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
 hidden:
   field_scroll_id: true
