--- a/source/drupal/var/drupal-config/sync/field.field.node.product_page.field_image.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.product_page.field_image.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: product_page
 label: Image
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
