--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.blocktext.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.blocktext.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.blocktext.field_margin_small
     - field.field.paragraph.blocktext.field_new_heading
     - field.field.paragraph.blocktext.field_paragraph
     - field.field.paragraph.blocktext.field_styles
@@ -43,6 +44,13 @@ targetEntityType: paragraph
 bundle: blocktext
 mode: default
 content:
+  field_margin_small:
+    weight: 4
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_new_heading:
     weight: 2
     settings:
