--- a/source/drupal/var/drupal-config/sync/search_api.index.shows.yml
+++ b/source/drupal/var/drupal-config/sync/search_api.index.shows.yml
@@ -51,6 +51,11 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_show_network
+  created:
+    label: 'Authored on'
+    datasource_id: 'entity:node'
+    property_path: created
+    type: date
 processor_settings:
   add_url:
     plugin_id: add_url
